...
                            android:text="@string/clipboard"
                            android:textSize="20sp" />

                        <!-- Manual Entry -->

                        <Button
                            android:id="@+id/btManualEntry"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/manual_entry"
...
                        android:layout_width="20dp"
                        android:layout_height="1dp" />

                    <!-- Enter Amount button -->

                    <ImageButton
                        android:id="@+id/btEnterAmount"
                        style="@style/MyceliumSlimButton"
                        android:layout_width="75dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/label_type_it_in"
                        android:scaleType="fitCenter"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="0dp">

                <Button
                    android:id="@+id/btSend"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/send"
...
