...
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/cashila_recipient_name"
                        />

                <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/cashila_recipient_address"
                        />

...
        <View
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="0"/>

        <Button
                android:id="@+id/btOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
...
